2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a macro to check Qt's version.
	* autotroll.m4 (AT_REQUIRE_QT_VERSION): New.

2006-11-16  Akim Demaille  <akim.demaille@free.fr>

	Improve check.mk
	* check.mk: Simplify the reporting.
	Use $(subdir).
	* reindent: Try to remove some useless parens.
	* rename: New.
	Not very safe, yet useful.

2006-11-16  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove spurious warnings from aclocal.
	* qscintilla2.m4: Use quadrigraphs to remove spurious warnings:
	aclocal:build-aux/qscintilla2.m4:53: warning: macro `AM_CPPFLAGS' not
	found in library
	aclocal:build-aux/qscintilla2.m4:56: warning: macro `AM_CXXFLAGS' not
	found in library

2006-11-16  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Properly handle Windows' CRLF.
	When we're on Windows, the output of the programs are first filtered
	so that any \r at end of line is removed.

	The script is also named test.sh.in so that you can list it in
	AC_CONFIG_FILES which allows you to run ./some.test directly (see the
	end of the documentation within the file). However, this doesn't break
	backward compatibility and test.sh.in can still be run without being an
	AC_CONFIG_FILES.

	* test.sh: Move to...
	* test.sh.in: ... this.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Fix handling of libport/config.h
	* urbi-config-headers-prefixed.m4 (PREFIXED_CONFIG_HEADER_basename):
	Define it.
	* config-headers-prefixed.mk: Use it.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Make svn bits more alike to prepare factoring
	* build-aux.mk: Do that based on libport bits.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	More reindent
	* reindent: Use libport/cstring.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Improve reindent to catch common patterns to factor
	* reindent: Also handle comments on the same line as the
	brace.
	strcmp == 0 -> STREQ.

2006-11-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
