@@ -21,8 +21,9 @@
 # against a reference output (if available) whereas Automake's builtin test
 # feature only checks the return value (without using DejaGnu).
 
-# Quick Setup
-# -----------
+# ----------- #
+# Quick Setup #
+# ----------- #
 
 # Better than a long explanation, here is a sample test suite to put in your
 # tests/Makefile.am:
@@ -48,8 +49,9 @@
 # If all your tests use the script, you don't have to bother with TESTS:
 # TESTS = $(check_PROGRAMS:=.test)
 
-# How to use
-# ----------
+# ---------- #
+# How to use #
+# ---------- #
 
 # Simply run `make check' or better, `make distcheck' :)
 # By default, only the return value will be checked -- which is just what
@@ -84,6 +86,20 @@
 # AC_CONFIG_FILES([build-aux/test.sh], [chmod a=rx build-aux/test.sh])
 # Warning: this entails that test.sh will be accessible from
 #          $(top_builddir)/build-aux.
+
+# ------------- #
+# With Valgrind #
+# ------------- #
+
+# Simply make sure that the environment variable USE_VALGRIND is not empty,
+# eg: make distcheck USE_VALGRIND=1 and valgrind will be used if installed.
+# If valgrind is not in your path or has a different name, use the VALGRIND
+# environment variable, eg:
+#   make distcheck USE_VALGRIND=1 VALGRIND='/path/to/valgrind'
+# If you want to pass additonnal arguments to valgrind, use VALGRIND_ARGS eg:
+#   make distcheck USE_VALGRIND=1 VALGRIND_ARGS='--tool=cachegrind'
+# Note that valgrind also reads its arguments from VALGRIND_OPTS or
+# ~/.valgrindrc or ./.valgrindrc (read valgrind's manual).
 
 # new_reference_output_file [ret|stdout|stderr] <ref-file>
 new_reference_output_file()
@@ -137,6 +153,30 @@ else
   esac
 fi
 
+use_valgrind='no'
+valgrind_libtool='no' # Are we trying to valgrind a libtool wrapper?
+if [ x"USE_VALGRIND" != x ] || [ x"WITH_VALGRIND" != x ]; then
+  : ${VALGRIND=valgrind}
+  if ($VALGRIND --version) >/dev/null 2>/dev/null; then
+    valgrind="$VALGRIND"
+    valgrind_args="$VALGRIND_ARGS --log-file-exactly=$bprog.valgrind.log"
+    use_valgrind='yes'
+  fi
+
+  # Are we about to run a script?
+  if [ x"`sed '1s/^\(..\).*/\1/;q' $prog`" = 'x#!' ]; then
+    # Libtool often generates a script instead of an executable, let's see if
+    # it's the case
+    if (grep -i 'generated by ltmain' $prog) >/dev/null 2>/dev/null; then
+      valgrind_libtool='yes'
+      sed "/ 	*exec .*progdir.*program/ s/exec/& $VALGRIND $valgrind_args/" \
+        $prog >$prog.run_valgrind || { echo "$0: Internal error" >&2; exit 1; }
+      chmod a+x $prog.run_valgrind
+    fi
+  fi
+
+fi
+
 # default values
 ref_ret=0;     check_ret='no'
 ref_stdout=''; check_stdout='no'
@@ -160,9 +200,20 @@ for i in ret stdout stderr; do
   done
 done
 
-# Run the program to check and save outputs.
-$prog >$bprog.my_stdout 2>$bprog.my_stderr
-my_ret=$?
+# ------------------------------------------ #
+# Run the program to check and save outputs. #
+# ------------------------------------------ #
+if [ $use_valgrind = yes ] && [ $valgrind_libtool = no ]; then
+  $valgrind $valgrind_args -- $prog >$bprog.my_stdout 2>$bprog.my_stderr
+  my_ret=$?
+elif [ $use_valgrind = yes ] && [ $valgrind_libtool = yes ]; then
+  $prog.run_valgrind >$bprog.my_stdout 2>$bprog.my_stderr
+  my_ret=$?
+  rm -f $prog.run_valgrind
+else
+  $prog >$bprog.my_stdout 2>$bprog.my_stderr
+  my_ret=$?
+fi
 
 # Return value of this script.
 script_exit=0
@@ -226,5 +277,20 @@ for i in stdout stderr; do
     rm -f $bprog.my_$i # No reference output => remove temporary file.
   fi
 done
+
+if [ $use_valgrind = yes ]; then
+  if [ -r $bprog.valgrind.log ]; then :; else
+    echo "$0: Cannot find/read valgrind's output." >&2
+    script_exit=1
+  fi
+
+  if (grep -i error $bprog.valgrind.log) >/dev/null 2>/dev/null; then
+    echo "$0: Valgrind found reported some errors:" >&2
+    cat $bprog.valgrind.log >&2
+    script_exit=1
+  else
+    rm -f $bprog.valgrind.log
+  fi
+fi
 
 exit $script_exit
