@@ -1,5 +1,10 @@
 2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
+	Add valgrind support.
+	* test.sh.in: Here. See the "built in" documentation.
+
+2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
 	Add a macro to check Qt's version.
 	* autotroll.m4 (AT_REQUIRE_QT_VERSION): New.
 
